[package]
name = "netuser"
version = "0.1.0"
edition = "2021"
description = "A small CLI tool to query Windows user information using native Windows APIs."
license = "MIT"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
widestring = "0.5"
windows = { version = "0.48.0", features = ["Win32_NetworkManagement_NetManagement", "Win32_Foundation"] }
